fix z-index for layout sidebar

--- a/projects/components/src/layout/layout-sidebar/layout-sidebar.component.scss
+++ b/projects/components/src/layout/layout-sidebar/layout-sidebar.component.scss
@@ -1,8 +1,11 @@
 :host {
-  display: block;
-  z-index: 101;
+  @apply block z-[101];
+
+  &:has(.emr-sidebar.compact) {
+    @apply z-[102]
+  }
 
   &.is-hidden {
-    display: none;
+    @apply hidden;
   }
 }
